--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
         BGAudio.volume = 0.8;
         audio.addEventListener('click', () => {
             if(BGAudio.getAttribute('src')) BGAudio.setAttribute('src', '');
-            else BGAudio.setAttribute('src', 'audio/背景音乐.mp3');
+            else BGAudio.setAttribute('src', 'https://dl.stream.qqmusic.qq.com/C400003AJpH714gvkl.m4a?guid=8993895200&vkey=0F1AE00A9243218007FC5EF02CC985A487E7B502F4CC4DD5BF105164019DC274FCB877E8C0543744B1823F85C54851993E68E7A8756B8349&uin=1152921504897252502&fromtag=120032');
             BGAudio.play();
         });
 
