--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             width: 100vw;
             height: 100vh;
             overflow: hidden;
-            background-image: url(imgs/BG1.jpeg);
+            background-image: url(imgs/BG2.jfif);
             background-size: cover;
             background-position: left;
         }
@@ -39,7 +39,7 @@
             position: fixed;
             top: 30px;
             right: 20px;
-            color: #ff5900;
+            color: #ff3c00;
             font-size: 20px;
             font-weight: 800;
         }
@@ -61,9 +61,9 @@
         .operate button {
             width: 66px;
             height: 40px;
-            background-color: #FFA042;
+            background-color: #1888ff;
             border-radius: 3px;
-            color: #632100;
+            color: #fcfcfc;
             border: none;
             margin: 0 8px;
         }
@@ -119,7 +119,7 @@
             position: fixed;
             top: 75px;
             right: 20px;
-            color: #ff7700;
+            color: #ff3c00;
             font-weight: 700;
         }
 
@@ -129,12 +129,12 @@
 
         .updataPage {
             width: 23px;
-            color: #ff7700;
+            color: #ff6200;
             font-size: 14px;
             position: fixed;
             top: 75px;
             left: 24px;
-            border: 2px solid #ff7700;
+            border: 2px solid #ff6200;
             background-color: transparent;
             font-weight: 800;
         }
@@ -147,13 +147,13 @@
             xmlns="http://www.w3.org/2000/svg">
             <path
                 d="M30 34.5C30 32.567 31.567 31 33.5 31H41V34.4C41 36.3882 39.3882 38 37.4 38H33.5C31.567 38 30 36.433 30 34.5Z"
-                fill="none" stroke="#ff5900" stroke-width="4" stroke-linejoin="round" />
+                fill="none" stroke="#ff3c00" stroke-width="4" stroke-linejoin="round" />
             <path
                 d="M6 38.5C6 36.567 7.567 35 9.5 35H16V38.4C16 40.3882 14.3882 42 12.4 42H9.5C7.567 42 6 40.433 6 38.5Z"
-                fill="none" stroke="#ff5900" stroke-width="4" stroke-linejoin="round" />
-            <path d="M16 18.044V18.044L41 12.125" stroke="#ff5900" stroke-width="4" stroke-linecap="round"
+                fill="none" stroke="#ff3c00" stroke-width="4" stroke-linejoin="round" />
+            <path d="M16 18.044V18.044L41 12.125" stroke="#ff3c00" stroke-width="4" stroke-linecap="round"
                 stroke-linejoin="round" />
-            <path d="M16 38V10L41 4V33.6924" stroke="#ff5900" stroke-width="4" stroke-linecap="round"
+            <path d="M16 38V10L41 4V33.6924" stroke="#ff3c00" stroke-width="4" stroke-linecap="round"
                 stroke-linejoin="round" /></svg>
     </button>
     <div class="surplus"></div>
