--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
             background-color: #ffffff; 
             border-radius: 3px;
             font-size: 14px;
-            color: #007bff;
+            color: #1687ff;
             font-weight: 800;
-            border: 1px solid #979797;
+            border: none;
             margin: 0 8px;
         }
 
@@ -146,6 +146,10 @@
             border: 2px solid var(--top-text-color);
             background-color: transparent;
             font-weight: 800;
+        }
+
+        button:focus {
+            outline: none;
         }
     </style>
 </head>
