--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         }
 
         .levelBox>div button.win {
-            color: rgb(0, 102, 254);
+            color: rgb(255, 102, 0);
             font-weight: 800;
         }
 
@@ -315,6 +315,7 @@
                 alert(str);
                 selectLevel.click();
             }, 200);
+            surplus.innerText = allGoods.length;
             createdAudio(audio);
             disorganizeNum = 0;
             recallNum = 0;
