--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
             background-color: #b6b6b6;
         }
 
+        .goods {
+            padding: 22px;
+        }
+
+        .box {
+            border: 3px solid rgb(76, 148, 255);
+        }
+
         .reset {
             width: 75px;
         }
