--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             width: 100vw;
             height: 100vh;
             overflow: hidden;
-            background-image: url(imgs/BG2.jfif);
+            background-image: url(king/BG1.jpg);
             background-size: cover;
             background-position: left;
             background-color: #b6b6b6;
