--- a/king.html
+++ b/king.html
@@ -22,9 +22,10 @@
             width: 100vw;
             height: 100vh;
             overflow: hidden;
+            background-image: url(king/BG1.jpg);
             background-size: cover;
             background-position: left;
-            background-color: white;
+            background-color: #b6b6b6;
         }
 
         .reset {
@@ -161,15 +162,6 @@
             border-color: rgb(255, 255, 255);
         }
 
-        .BGV {
-            position: fixed;
-            z-index: -9;
-            top: 0;
-            left: -50%;
-            width: auto;
-            height: 100vh;
-        }
-
         .heroEmpty {
             position: fixed;
             top: 50px;
@@ -212,8 +204,6 @@
     <button class="updataPage" onclick="javascript:location.reload();">更新</button>
     <div class="heroEmpty"></div>
     <a href="index.html" class="hrefSheep">羊了个羊</a>
-
-    <video muted autoplay src="king/BGV.mp4" class="BGV"></video>
 
     <div class="operate">
         <button class="disorganize btn">打乱</button>
@@ -299,7 +289,7 @@
 
         function goodsClick(self) {
             if (boxVolume >= 7) return;
-            createdAudio('audio/点击.mp3');
+            createdAudio('king/click.mp3');
             const newGoods = self.cloneNode();
             newGoods.style.top = 0;
             newGoods.style.left = boxGoodsLeft + 'px';
@@ -426,7 +416,7 @@
 
         audio.addEventListener('click', () => {
             if (BGAudio.getAttribute('src')) BGAudio.setAttribute('src', '');
-            else BGAudio.setAttribute('src', 'audio/BGM1.mp3');
+            else BGAudio.setAttribute('src', 'king/BGM1.mp3');
             BGAudio.play();
         });
 
