--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             background-color: #ffffff;
             border-radius: 3px;
             font-size: 14px;
-            color: #1687ff;
+            color: rgb(66, 144, 255);
             font-weight: 800;
             border: none;
             margin: 0 8px;
@@ -153,8 +153,13 @@
             outline: none;
         }
 
+        .box {
+            border-color: rgb(99, 164, 255);
+        }
+
         .goods {
             padding: 22px;
+            filter: brightness(90%);
         }
 
         .hrefSheep {
